Closed
Bug 317482
Opened 20 years ago
Closed 20 years ago
AccessibleText getRangeExtents does not work
Categories
(Firefox :: Disability Access, defect)
Tracking
()
RESOLVED
FIXED
People
(Reporter: wwalker, Assigned: ginnchen+exoracle)
References
()
Details
(Keywords: access, fixed1.8.1)
Attachments
(2 files)
17.15 KB,
text/x-python
|
Details | |
2.96 KB,
patch
|
aaronlev
:
review+
roc
:
superreview+
aaronlev
:
approval-branch-1.8.1+
|
Details | Diff | Splinter Review |
User-Agent: Mozilla/5.0 (X11; U; Linux i686; en-US; rv:1.8) Gecko/20051111 Firefox/1.5
Build Identifier: Mozilla/5.0 (X11; U; Linux i686; en-US; rv:1.8) Gecko/20051111 Firefox/1.5
It appears as though all calls to getRangeExtents on any AccessibleText object in Firefox return x=y=width=height=0.
Reproducible: Always
Steps to Reproduce:
1. Run gnome-terminal
2. Run the attached standalone python application in an xterm
3. Click on the gnome-terminal window. Press F11.
4. Run Firefox and click on its window. Press F11.
Note that due to bug 317475 you should not have Firefox running at step 3. In addition, you might need to click in Firefox's URL location text area at the top of its window for step 4 to "work".
Actual Results:
Step 3: You will see what a well-behaved application should do.
Step 4: You will see output like the following with the following
values: (start=0, end=51, x=0, y=0, width=0, height=0)
Note: You might need to click on the location URL text area at the top
of the Firefox window - see bug 317475.
Expected Results:
getRangeExtents should produce values that are real
The attached module is a standalone module that speaks pure AT-SPI IDL.
![]() |
Reporter | |
Comment 1•20 years ago
|
||
not implemented yet
Assignee: nobody → ginn.chen
Status: UNCONFIRMED → NEW
Ever confirmed: true
(In reply to comment #2)
> not implemented yet
>
getRangeExtents is implemented by libspi,
but mozilla's getCharacterExtents has some significant bugs, so it's not working
I'll post my patch tommorrow.
Status: NEW → ASSIGNED
Fix typos
Attachment #205376 -
Flags: review?(aaronleventhal)
Updated•20 years ago
|
Attachment #205376 -
Flags: review?(aaronleventhal) → review+
Attachment #205376 -
Flags: superreview?(roc)
Attachment #205376 -
Flags: superreview?(roc) → superreview+
Checking in nsAccessibleHyperText.cpp;
/cvsroot/mozilla/accessible/src/atk/nsAccessibleHyperText.cpp,v <-- nsAccessibleHyperText.cpp
new revision: 1.27; previous revision: 1.26
done
Checking in nsMaiInterfaceText.cpp;
/cvsroot/mozilla/accessible/src/atk/nsMaiInterfaceText.cpp,v <-- nsMaiInterfaceText.cpp
new revision: 1.5; previous revision: 1.4
done
Status: ASSIGNED → RESOLVED
Closed: 20 years ago
Resolution: --- → FIXED
![]() |
Reporter | |
Comment 6•20 years ago
|
||
It appears as though calling getRangeExtents causes odd side effects in the html output: it looks as though it causes the html pane to scroll to the top. I think a call to getRangeExtents should be for informative purposes only and should not have an impact on what is shown to the user. To reproduce this, please open this bug report in your browser and scroll the page down. Then repeat the test steps above. You'll see that the page scrolls to the top.
Thanks!
Will
Status: RESOLVED → REOPENED
Resolution: FIXED → ---
Yes, I noticed this problem. It's not caused by getRangeExtents.
When calling getTextAtOffset, the selection will change to the line or word and change back, so the page scrolls.
I think we should file another bug for getTextAtOffset.
Status: REOPENED → RESOLVED
Closed: 20 years ago → 20 years ago
Resolution: --- → FIXED
Bug 322093 filed for the scroll issue.
Comment on attachment 205376 [details] [diff] [review]
patch
Function lose w/ this bug.
Risk is low.
Attachment #205376 -
Flags: approval1.8.1?
Updated•20 years ago
|
Attachment #205376 -
Flags: approval1.8.1? → branch-1.8.1?(aaronleventhal)
Updated•20 years ago
|
Attachment #205376 -
Flags: approval-branch-1.8.1?(aaronleventhal) → approval-branch-1.8.1+
Assignee | ||
Comment 10•20 years ago
|
||
Checking in src/atk/nsAccessibleHyperText.cpp;
/cvsroot/mozilla/accessible/src/atk/nsAccessibleHyperText.cpp,v <-- nsAccessibleHyperText.cpp
new revision: 1.25.8.1; previous revision: 1.25
done
Checking in src/atk/nsMaiInterfaceText.cpp;
/cvsroot/mozilla/accessible/src/atk/nsMaiInterfaceText.cpp,v <-- nsMaiInterfaceText.cpp
new revision: 1.4.12.1; previous revision: 1.4
done
Keywords: access,
fixed1.8.1
Assignee | ||
Comment 11•20 years ago
|
||
(In reply to comment #8)
> Bug 322093 filed for the scroll issue.
>
Sorry, it should be 322903.
You need to log in
before you can comment on or make changes to this bug.
Description
•