Bug 317482 AccessibleText getRangeExtents does not work r=aaronleventhal sr=roc